--- a/index.html
+++ b/index.html
@@ -14,7 +14,7 @@
     <div class="logo"><a href = "#"><img class="logo_img" src="images/pawsandfins.png" alt="Paws & Fins"></a></div>
       <!--Nav Links-->
       <div class="dropdown">
-        <button class="navbtns"><a href="#" class="white">Home</a></button>
+        <button class="navbtns"><a href="index.html" class="white">Home</a></button>
         <button class="navbtns"><a href="#" class="white">About</a></button>
         <div class="pets">
           <button class="white navbtns">Pets</button>
@@ -30,8 +30,8 @@
         <div class="accounts">
           <button class="white navbtns">Account</button>
           <ul class="navbtns">
-            <li><a href="#">Login</a></li>
-            <li><a href="#">Register</a></li>
+            <li><a href="login.html">Login</a></li>
+            <li><a href="register.html">Register</a></li>
           </ul>
         </div>
       </div>
@@ -46,7 +46,7 @@
 
       <!--Shopping Cart-->
       <form action="cart.html" class="shopping-cart">
-        <button type="submit" class="fa fa-shopping-cart" style=font-size:24px>
+        <button type="submit" class="fa fa-shopping-cart" style=font-size:24px></button>
       </form>
     </div>
   </nav>
