--- a/cart.html
+++ b/cart.html
@@ -30,8 +30,8 @@
         <div class="accounts">
           <button class="white navbtns">Account</button>
           <ul class="navbtns">
-            <li><a href="#">Login</a></li>
-            <li><a href="#">Register</a></li>
+            <li><a href="login.html">Login</a></li>
+            <li><a href="register.html">Register</a></li>
           </ul>
         </div>
       </div>
