--- a/cart.html
+++ b/cart.html
@@ -9,50 +9,115 @@
   <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/4.7.0/css/font-awesome.min.css"/>
 </head>
 <body>
-  <nav>
-    <div class="content">
-    <div class="logo"><a href = "#"><img class="logo_img" src="images/pawsandfins.png" alt="Paws & Fins"></a></div>
-      <!--Nav Links-->
-      <div class="dropdown">
-        <button class="navbtns"><a href="index.html" class="white">Home</a></button>
-        <button class="navbtns"><a href="#" class="white">About</a></button>
-        <div class="pets">
-          <button class="white navbtns">Pets</button>
-          <ul class="navbtns">
-            <li><a href="#">Cats</a></li>
-            <li><a href="#">Dogs</a></li>
-            <li><a href="#">Fish</a></li>
+  <div class="wrapper">
+    <nav>
+      <div class="content">
+        <div class="logo"><a href = "#"><img class="logo1" src="images/pawsandfins.png" alt="Paws & Fins"></a></div>
+          <ul class="links">
+            <li><a href="index.html">Home</a></li>
+            <li><a href="#">About</a></li>
+            <li>
+              <a href="#" class="desktop-link">Pets</a>
+              <input type="checkbox" id="show-features">
+              <label for="show-features">Features</label>
+              <ul>
+                <li><a href="#">Cats</a></li>
+                <li><a href="#">Dogs</a></li>
+                <li><a href="#">Fish</a></li>
+              </ul>
+            </li>
+            <li><a href="#">Contact</a></li>
           </ul>
-        </div>
-        <button class="navbtns"><a href="#" class="white">Contact</a></button>
-      </div>
-      <div class="dropdown2">
-        <div class="accounts">
-          <button class="white navbtns">Account</button>
-          <ul class="navbtns">
-            <li><a href="login.html">Login</a></li>
-            <li><a href="register.html">Register</a></li>
-          </ul>
-        </div>
-      </div>
 
-      <!--Search Box-->
-      <form>
-        <div class ="search-box">
-          <input type ="text" class ="txt" placeholder="Search Here...">
-          <a class ="btn"><i class="fa fa-search"></i></a>
-        </div>
-      </form>
+        <!--Search Box-->
+        <form>
+          <div class ="search-box">
+            <input type ="text" class ="txt" placeholder="Search Here...">
+            <a class ="btn"><i class="fa fa-search"></i></a>
+          </div>
+        </form>
 
-      <!--Shopping Cart-->
-      <form action="cart.html" class="shopping-cart">
-        <button type="submit" class="fa fa-shopping-cart" style=font-size:24px>
-      </form>
+        <!--Shopping Cart-->
+        <form action="cart.html" class="shopping-cart">
+          <button type="submit" class="fa fa-shopping-cart"></button>
+        </form>
+      </div>
+    </nav>
+  </div>
+  <!-----Cart item details----->
+  <div class="small-container cart-page">
+    <table>
+      <tr>
+        <th>Product</th>
+        <th>Quantity</th>
+        <th>Subtotal</th>
+      </tr>
+      <tr>
+        <td><div class="cart-info">
+          <img src="<!--need image-->">
+          <div>
+            <p>Fish food</p>
+            <small>Price: $10.00</small>
+            <br>
+            <a href="">Remove</a>
+          </div>
+        </div>
+
+        </td>
+        <td><input type="number" value="1"></td>
+        <td>$10.00</td>
+      </tr>
+      <tr>
+        <td><div class="cart-info">
+          <img src="<!--need image-->">
+          <div>
+            <p>Dog food</p>
+            <small>Price: $50.00</small>
+            <br>
+            <a href="">Remove</a>
+          </div>
+        </div>
+
+        </td>
+        <td><input type="number" value="1"></td>
+        <td>$50.00</td>
+      </tr>
+      <tr>
+        <td><div class="cart-info">
+          <img src="<!--need image-->">
+          <div>
+            <p>Cat food</p>
+            <small>Price: $30.00</small>
+            <br>
+            <a href="">Remove</a>
+          </div>
+        </div>
+
+        </td>
+        <td><input type="number" value="1"></td>
+        <td>$30.00</td>
+      </tr>
+    </table>
+
+    <div class="total-price">
+
+      <table>
+        <tr>
+          <td>Subtotal</td>
+          <td>$90.00</td>
+        </tr>
+        <tr>
+          <td>Tax</td>
+          <td>$9.00</td>
+        </tr>
+        <tr>
+          <td>Subtotal</td>
+          <td>$90.00</td>
+        </tr>
+      </table>
+
     </div>
-  </nav>
-  <div class="middle">
-    <h1>My First Heading</h1>
-    <p>My first paragraph.</p>
+
   </div>
 </body>
 </html>
