Shopping page Skeleton
Still needs an array list with db connection to display the items from database. Just used some static data to get it running but the javascript works for sending data from shopping.html to the cart page. Could use as template for the product pages. Buttons on cart page do nothing at the moment. script is currently only in cart and shopping.html.

--- a/about.html
+++ b/about.html
@@ -49,8 +49,8 @@
     <div class="feature_divider"></div>
     <p>An exclusive connection to your pet supply needs.</p>
 </div>
-<div class="container">
-    <div class="container">
+<div class="z">
+    <div class="z">
         <h2 style="text-align: center;">Who We Are</h2>
         <p style="text-align: left;">Starting in 2021 out of our hometown Marietta, Georgia; we have teamed up with the best locally sourced farmers to deliver the best food available on the market for your pet.</p>
         <p style="text-align: left;">From free-range chickens in Clarkston, Georgia to the highest quality nutrients and fish sourced off the shores of Anchorage, Alaska; you can rest assured your pet is getting the best.</p>
