--- a/cart.html
+++ b/cart.html
@@ -16,6 +16,8 @@
           <ul class="links">
             <li><a href="index.html">Home</a></li>
             <li><a href="#">About</a></li>
+            <li class="shopping-cart"><a href="cart.html"><ion-icon name="basket"></ion-icon>Cart<span>0</span>
+            </a>
             <li>
               <a href="#" class="desktop-link">Pets</a>
               <input type="checkbox" id="show-features">
@@ -37,87 +39,24 @@
           </div>
         </form>
 
-        <!--Shopping Cart-->
-        <form action="cart.html" class="shopping-cart">
-          <button type="submit" class="fa fa-shopping-cart"></button>
-        </form>
+
       </div>
     </nav>
   </div>
-  <!-----Cart item details----->
-  <div class="small-container cart-page">
-    <table>
-      <tr>
-        <th>Product</th>
-        <th>Quantity</th>
-        <th>Subtotal</th>
-      </tr>
-      <tr>
-        <td><div class="cart-info">
-          <img src="<!--need image-->">
-          <div>
-            <p>Fish food</p>
-            <small>Price: $10.00</small>
-            <br>
-            <a href="">Remove</a>
-          </div>
-        </div>
-
-        </td>
-        <td><input type="number" value="1"></td>
-        <td>$10.00</td>
-      </tr>
-      <tr>
-        <td><div class="cart-info">
-          <img src="<!--need image-->">
-          <div>
-            <p>Dog food</p>
-            <small>Price: $50.00</small>
-            <br>
-            <a href="">Remove</a>
-          </div>
-        </div>
-
-        </td>
-        <td><input type="number" value="1"></td>
-        <td>$50.00</td>
-      </tr>
-      <tr>
-        <td><div class="cart-info">
-          <img src="<!--need image-->">
-          <div>
-            <p>Cat food</p>
-            <small>Price: $30.00</small>
-            <br>
-            <a href="">Remove</a>
-          </div>
-        </div>
-
-        </td>
-        <td><input type="number" value="1"></td>
-        <td>$30.00</td>
-      </tr>
-    </table>
-
-    <div class="total-price">
-
-      <table>
-        <tr>
-          <td>Subtotal</td>
-          <td>$90.00</td>
-        </tr>
-        <tr>
-          <td>Tax</td>
-          <td>$9.00</td>
-        </tr>
-        <tr>
-          <td>Subtotal</td>
-          <td>$90.00</td>
-        </tr>
-      </table>
+  <div class="products-container">
+    <div class="product-header">
+      <h5 class="product-title">PRODUCT</h5>
+      <h5 class="price">PRICE</h5>
+      <h5 class="quantity">QUANTITY</h5>
+      <h5 class="total">TOTAL</h5>
+    </div>
+    <div class="products">
 
     </div>
-
   </div>
+
+  <script src="cart.js"></script>
+  <script type="module" src="https://unpkg.com/ionicons@5.5.2/dist/ionicons/ionicons.esm.js"></script>
+  <script nomodule src="https://unpkg.com/ionicons@5.5.2/dist/ionicons/ionicons.js"></script>
 </body>
 </html>
